# cybershield

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  cybershield.db  cybershield.db-journal  docker-compose.yml  pyproject.toml  requirements.txt  test_db.py
.github/workflows/: lint.yml  tests.yml
app/: database.py  main.py
app/middleware/: logging.py  rate_limit.py
app/models/: alert.py  audit.py  event.py  user.py
app/routers/: __init__.py  auth.py  dashboard.py  events.py  health.py
app/schemas/: __init__.py  auth.py
app/services/: detection.py  detection_engine.py  log_generator.py  mitre.py  mitre_mapper.py  scoring.py  suppression.py
app/services/rules/: geo_anomaly.py  port_scan.py  sqli_detection.py
app/templates/: base.html  dashboard.html  login.html  register.html
app/utils/: export.py  pagination.py  password.py  sanitize.py
tests/: conftest.py  test_auth.py  test_detection_rules.py
